Fix social on mobile

--- a/app/sass/layout/_top.sass
+++ b/app/sass/layout/_top.sass
@@ -184,8 +184,10 @@
       background-color: #fff
   .top-side__fb
     background: url('../img/facebook-white.svg')
+    background-size: cover
   .top-side__ins
     background: url('../img/instagram-white.svg')
+    background-size: cover
 
 
 .top-side 
